--- a/exemples/new-kr.config.json
+++ b/exemples/new-kr.config.json
@@ -199,7 +199,7 @@
     {
       "degree": 0,
       "name": "conjunction",
-      "active": 1,
+      "is_active": 1,
       "visible_grid": 1,
       "is_major": 1,
       "is_minor": 0,
@@ -208,7 +208,7 @@
     {
       "degree": 30,
       "name": "semi-sextile",
-      "active": 0,
+      "is_active": 0,
       "visible_grid": 0,
       "is_major": 0,
       "is_minor": 1,
@@ -217,7 +217,7 @@
     {
       "degree": 45,
       "name": "semi-square",
-      "active": 0,
+      "is_active": 0,
       "visible_grid": 0,
       "is_major": 0,
       "is_minor": 1,
@@ -226,7 +226,7 @@
     {
       "degree": 60,
       "name": "sextile",
-      "active": 1,
+      "is_active": 1,
       "visible_grid": 1,
       "is_major": 1,
       "is_minor": 0,
@@ -235,7 +235,7 @@
     {
       "degree": 72,
       "name": "quintile",
-      "active": 1,
+      "is_active": 1,
       "visible_grid": 1,
       "is_major": 0,
       "is_minor": 1,
@@ -244,7 +244,7 @@
     {
       "degree": 90,
       "name": "square",
-      "active": 1,
+      "is_active": 1,
       "visible_grid": 1,
       "is_major": 1,
       "is_minor": 0,
@@ -253,7 +253,7 @@
     {
       "degree": 120,
       "name": "trine",
-      "active": 1,
+      "is_active": 1,
       "visible_grid": 1,
       "is_major": 1,
       "is_minor": 0,
@@ -262,7 +262,7 @@
     {
       "degree": 135,
       "name": "sesquiquadrate",
-      "active": 0,
+      "is_active": 0,
       "visible_grid": 0,
       "is_major": 0,
       "is_minor": 1,
@@ -271,7 +271,7 @@
     {
       "degree": 144,
       "name": "biquintile",
-      "active": 0,
+      "is_active": 0,
       "visible_grid": 0,
       "is_major": 0,
       "is_minor": 1,
@@ -280,7 +280,7 @@
     {
       "degree": 150,
       "name": "quincunx",
-      "active": 0,
+      "is_active": 0,
       "visible_grid": 0,
       "is_major": 0,
       "is_minor": 0,
@@ -289,7 +289,7 @@
     {
       "degree": 180,
       "name": "opposition",
-      "active": 1,
+      "is_active": 1,
       "visible_grid": 1,
       "is_major": 1,
       "is_minor": 0,
@@ -302,9 +302,9 @@
       "id": 0,
       "name": "Sun",
       "color": "#984b00",
-      "active": 1,
+      "is_active": 1,
       "element_points": 40,
-      "zodiac_relation": "4",
+      "related_zodiac_signs": "4",
       "label": "Sun",
       "label_short": "sun"
     },
@@ -312,9 +312,9 @@
       "id": 1,
       "name": "Moon",
       "color": "#150052",
-      "active": 1,
+      "is_active": 1,
       "element_points": 40,
-      "zodiac_relation": "3",
+      "related_zodiac_signs": "3",
       "label": "Moon",
       "label_short": "moon"
     },
@@ -322,9 +322,9 @@
       "id": 2,
       "name": "Mercury",
       "color": "#520800",
-      "active": 1,
+      "is_active": 1,
       "element_points": 15,
-      "zodiac_relation": "2,5",
+      "related_zodiac_signs": "2,5",
       "label": "Mercury",
       "label_short": "mercury"
     },
@@ -332,9 +332,9 @@
       "id": 3,
       "name": "Venus",
       "color": "#400052",
-      "active": 1,
+      "is_active": 1,
       "element_points": 15,
-      "zodiac_relation": "1,6",
+      "related_zodiac_signs": "1,6",
       "label": "Venus",
       "label_short": "venus"
     },
@@ -342,9 +342,9 @@
       "id": 4,
       "name": "Mars",
       "color": "#540000",
-      "active": 1,
+      "is_active": 1,
       "element_points": 15,
-      "zodiac_relation": "0",
+      "related_zodiac_signs": "0",
       "label": "Mars",
       "label_short": "mars"
     },
@@ -352,9 +352,9 @@
       "id": 5,
       "name": "Jupiter",
       "color": "#47133d",
-      "active": 1,
+      "is_active": 1,
       "element_points": 10,
-      "zodiac_relation": "8",
+      "related_zodiac_signs": "8",
       "label": "Jupiter",
       "label_short": "jupiter"
     },
@@ -362,9 +362,9 @@
       "id": 6,
       "name": "Saturn",
       "color": "#124500",
-      "active": 1,
+      "is_active": 1,
       "element_points": 10,
-      "zodiac_relation": "9",
+      "related_zodiac_signs": "9",
       "label": "Saturn",
       "label_short": "saturn"
     },
@@ -372,9 +372,9 @@
       "id": 7,
       "name": "Uranus",
       "color": "#6f0766",
-      "active": 1,
+      "is_active": 1,
       "element_points": 10,
-      "zodiac_relation": "10",
+      "related_zodiac_signs": "10",
       "label": "Uranus",
       "label_short": "uranus"
     },
@@ -382,9 +382,9 @@
       "id": 8,
       "name": "Neptune",
       "color": "#06537f",
-      "active": 1,
+      "is_active": 1,
       "element_points": 10,
-      "zodiac_relation": "11",
+      "related_zodiac_signs": "11",
       "label": "Neptune",
       "label_short": "neptune"
     },
@@ -392,9 +392,9 @@
       "id": 9,
       "name": "Pluto",
       "color": "#713f04",
-      "active": 0,
+      "is_active": 0,
       "element_points": 10,
-      "zodiac_relation": "7",
+      "related_zodiac_signs": "7",
       "label": "Pluto",
       "label_short": "pluto"
     },
@@ -402,9 +402,9 @@
       "id": 10,
       "name": "Mean_Node",
       "color": "#4c1541",
-      "active": 0,
+      "is_active": 0,
       "element_points": 20,
-      "zodiac_relation": "-1",
+      "related_zodiac_signs": "-1",
       "label": "North_Node",
       "label_short": "North_Node"
     },
@@ -412,9 +412,9 @@
       "id": 11,
       "name": "True_Node",
       "color": "#4c1541",
-      "active": 0,
+      "is_active": 0,
       "element_points": 0,
-      "zodiac_relation": "-1",
+      "related_zodiac_signs": "-1",
       "label": "True_Node",
       "label_short": "True_Node"
     },
@@ -422,9 +422,9 @@
       "id": 12,
       "name": "1",
       "color": "#ff7e00",
-      "active": 1,
+      "is_active": 1,
       "element_points": 40,
-      "zodiac_relation": "-1",
+      "related_zodiac_signs": "-1",
       "label": "Asc",
       "label_short": "Asc"
     },
@@ -432,9 +432,9 @@
       "id": 13,
       "name": "10",
       "color": "#FF0000",
-      "active": 1,
+      "is_active": 1,
       "element_points": 20,
-      "zodiac_relation": "-1",
+      "related_zodiac_signs": "-1",
       "label": "Mc",
       "label_short": "Mc"
     },
@@ -442,9 +442,9 @@
       "id": 14,
       "name": "7",
       "color": "#0000FF",
-      "active": 1,
+      "is_active": 1,
       "element_points": 0,
-      "zodiac_relation": "-1",
+      "related_zodiac_signs": "-1",
       "label": "Dsc",
       "label_short": "Dsc"
     },
@@ -452,9 +452,9 @@
       "id": 15,
       "name": "4",
       "color": "#000000",
-      "active": 0,
+      "is_active": 0,
       "element_points": 0,
-      "zodiac_relation": "-1",
+      "related_zodiac_signs": "-1",
       "label": "Ic",
       "label_short": "Ic"
     }
