--- a/exemples/new-kr.config.json
+++ b/exemples/new-kr.config.json
@@ -13,7 +13,7 @@
       "earth": "Earth",
       "air": "Air",
       "water": "Water",
-      "&": "and",
+      "and_word": "and",
       "transits": "Transits for",
       "type": "Type",
       "aspects": "Couple aspects",
@@ -55,7 +55,7 @@
       "earth": "Terra",
       "air": "Ar",
       "water": "Água",
-      "&": "e",
+      "and_word": "e",
       "transits": "Trânsitos para",
       "type": "Tipo",
       "aspects": "Aspectos do casal",
@@ -97,7 +97,7 @@
       "earth": "Terra",
       "air": "Aria",
       "water": "Acqua",
-      "&": "e",
+      "and_word": "e",
       "transits": "Transiti per",
       "type": "Tipo",
       "aspects": "Aspetti di coppia",
