--- a/kerykeion/kr.config.json
+++ b/kerykeion/kr.config.json
@@ -13,7 +13,7 @@
       "earth": "Earth",
       "air": "Air",
       "water": "Water",
-      "&": "and",
+      "and_word": "and",
       "transits": "Transits for",
       "type": "Type",
       "aspects": "Couple aspects",
@@ -53,7 +53,7 @@
       "earth": "Terre",
       "air": "Air",
       "water": "Eau",
-      "&": "et",
+      "and_word": "et",
       "transits": "Transites pour",
       "type": "Type",
       "aspects": "Les aspects",
@@ -61,7 +61,7 @@
       "transit_name": "Au moment de la transition",
       "lunar_phase": "Phase Lunaire",
       "day": "Jour",
-      "planets": {
+      "celestial_points": {
         "Sun": "Soleil",
         "Moon": "Lune",
         "Mercury": "Mercure",
@@ -93,7 +93,7 @@
       "earth": "Terra",
       "air": "Ar",
       "water": "Água",
-      "&": "e",
+      "and_word": "e",
       "transits": "Trânsitos para",
       "type": "Tipo",
       "aspects": "Aspectos do casal",
@@ -133,7 +133,7 @@
       "earth": "Terra",
       "air": "Aria",
       "water": "Acqua",
-      "&": "e",
+      "and_word": "e",
       "transits": "Transiti per",
       "type": "Tipo",
       "aspects": "Aspetti di coppia",
@@ -173,7 +173,7 @@
       "earth": "土",
       "air": "風",
       "water": "水",
-      "&": "與",
+      "and_word": "與",
       "transits": "流年合盤",
       "type": "盤型",
       "aspects": "相位",
