Main object renamed + some refactory.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,4 +91,4 @@ test = "pytest"
 test-no-capture = "poetry run pytest --show-capture no  "
 lint = "mypy"
 docs = "pdoc kerykeion -o ./docs"
-format = "black kerykeion tests scripts --line-length 120"
+format = "black kerykeion tests --line-length 120"
