--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ classifiers = [
     "Typing :: Typed",
 ]
 
+# To include Kerykeion itself
+packages = [{ include = "kerykeion" }]
+
 [tool.poetry.dependencies]
 python = "^3.9"
 pyswisseph = "^2.10.3.1"
@@ -55,9 +58,8 @@ black = "^22.12.0"
 pdoc = "^12.3.0"
 types-requests = "^2.28.11.7"
 types-pytz = "^2022.7.0.0"
-
-# PyPi Publishing
 poethepoet = "^0.19.0"
+
 [[tool.poetry.source]]
 name = "test"
 url = "https://test.pypi.org/simple/"
