--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,4 +87,5 @@ test = "pytest"
 test-no-capture = "poetry run pytest --show-capture no  "
 lint = "mypy"
 docs = "pdoc kerykeion -o ./docs"
-format = "black kerykeion tests --line-length 120"
+format = "black --line-length 120"
+"format:all" = "black kerykeion tests --line-length 120"
