Fixed unit tests and settings pydantic model

--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -77,7 +77,7 @@
         "Mc": "Mc",
         "Dsc": "Dsc",
         "Ic": "Ic",
-        "North_Node": "Noeud Nord",
+        "True_Node": "Noeud Nord",
         "Mean_Node": "Noeud Moyen",
         "Chiron": "Chiron"
       }
