--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ poethepoet = "^0.19.0"
 # MyPy Static Analysis
 [tool.mypy]
 ignore_missing_imports = true
-mypy_path = "kerkeion"
+mypy_path = "kerykeion"
 files = "kerykeion"
 
 # PyTest Automated Testing
