CSS Color Variables
Now all the chart colors are managed by CSS variables.
This change opens the way for more customizations and
for the future refactory of all the color system.

--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -220,7 +220,7 @@
       "is_major": 1,
       "is_minor": 0,
       "orb": 10,
-      "color": "#5757e2"
+      "color": "var(--kerykeion-chart-color-conjunction)"
     },
     {
       "degree": 30,
@@ -230,7 +230,7 @@
       "is_major": 0,
       "is_minor": 1,
       "orb": 1,
-      "color": "#810757"
+      "color": "var(--kerykeion-chart-color-semi-sextile)"
     },
     {
       "degree": 45,
@@ -240,7 +240,7 @@
       "is_major": 0,
       "is_minor": 1,
       "orb": 1,
-      "color": "#b14e58"
+      "color": "var(--kerykeion-chart-color-semi-square)"
     },
     {
       "degree": 60,
@@ -250,7 +250,7 @@
       "is_major": 1,
       "is_minor": 0,
       "orb": 6,
-      "color": "#d59e28"
+      "color": "var(--kerykeion-chart-color-sextile)"
     },
     {
       "degree": 72,
@@ -260,7 +260,7 @@
       "is_major": 0,
       "is_minor": 1,
       "orb": 1,
-      "color": "#1f99b3"
+      "color": "var(--kerykeion-chart-color-quintile)"
     },
     {
       "degree": 90,
@@ -270,7 +270,7 @@
       "is_major": 1,
       "is_minor": 0,
       "orb": 5,
-      "color": "#dc0000"
+      "color": "var(--kerykeion-chart-color-square)"
     },
     {
       "degree": 120,
@@ -280,7 +280,7 @@
       "is_major": 1,
       "is_minor": 0,
       "orb": 8,
-      "color": "#36d100"
+      "color": "var(--kerykeion-chart-color-trine)"
     },
     {
       "degree": 135,
@@ -290,7 +290,7 @@
       "is_major": 0,
       "is_minor": 1,
       "orb": 1,
-      "color": "#985a10"
+      "color": "var(--kerykeion-chart-color-sesquiquadrate)"
     },
     {
       "degree": 144,
@@ -300,7 +300,7 @@
       "is_major": 0,
       "is_minor": 1,
       "orb": 1,
-      "color": "#7a9810"
+      "color": "var(--kerykeion-chart-color-biquintile)"
     },
     {
       "degree": 150,
@@ -310,7 +310,7 @@
       "is_major": 0,
       "is_minor": 0,
       "orb": 1,
-      "color": "#26bbcf"
+      "color": "var(--kerykeion-chart-color-quincunx)"
     },
     {
       "degree": 180,
@@ -320,14 +320,14 @@
       "is_major": 1,
       "is_minor": 0,
       "orb": 10,
-      "color": "#510060"
+      "color": "var(--kerykeion-chart-color-opposition)"
     }
   ],
   "celestial_points": [
     {
       "id": 0,
       "name": "Sun",
-      "color": "#984b00",
+      "color": "var(--kerykeion-chart-color-sun)",
       "is_active": true,
       "element_points": 40,
       "related_zodiac_signs": ["4"],
@@ -336,7 +336,7 @@
     {
       "id": 1,
       "name": "Moon",
-      "color": "#150052",
+      "color": "var(--kerykeion-chart-color-moon)",
       "is_active": true,
       "element_points": 40,
       "related_zodiac_signs": ["3"],
@@ -345,7 +345,7 @@
     {
       "id": 2,
       "name": "Mercury",
-      "color": "#520800",
+      "color": "var(--kerykeion-chart-color-mercury)",
       "is_active": true,
       "element_points": 15,
       "related_zodiac_signs": ["2", "5"],
@@ -354,7 +354,7 @@
     {
       "id": 3,
       "name": "Venus",
-      "color": "#400052",
+      "color": "var(--kerykeion-chart-color-venus)",
       "is_active": true,
       "element_points": 15,
       "related_zodiac_signs": ["1", "6"],
@@ -363,7 +363,7 @@
     {
       "id": 4,
       "name": "Mars",
-      "color": "#540000",
+      "color": "var(--kerykeion-chart-color-mars)",
       "is_active": true,
       "element_points": 15,
       "related_zodiac_signs": ["0"],
@@ -372,7 +372,7 @@
     {
       "id": 5,
       "name": "Jupiter",
-      "color": "#47133d",
+      "color": "var(--kerykeion-chart-color-jupiter)",
       "is_active": true,
       "element_points": 10,
       "related_zodiac_signs": ["8"],
@@ -381,7 +381,7 @@
     {
       "id": 6,
       "name": "Saturn",
-      "color": "#124500",
+      "color": "var(--kerykeion-chart-color-saturn)",
       "is_active": true,
       "element_points": 10,
       "related_zodiac_signs": ["9"],
@@ -390,7 +390,7 @@
     {
       "id": 7,
       "name": "Uranus",
-      "color": "#6f0766",
+      "color": "var(--kerykeion-chart-color-uranus)",
       "is_active": true,
       "element_points": 10,
       "related_zodiac_signs": ["10"],
@@ -399,7 +399,7 @@
     {
       "id": 8,
       "name": "Neptune",
-      "color": "#06537f",
+      "color": "var(--kerykeion-chart-color-neptune)",
       "is_active": true,
       "element_points": 10,
       "related_zodiac_signs": ["11"],
@@ -408,7 +408,7 @@
     {
       "id": 9,
       "name": "Pluto",
-      "color": "#713f04",
+      "color": "var(--kerykeion-chart-color-pluto)",
       "is_active": true,
       "element_points": 10,
       "related_zodiac_signs": ["7"],
@@ -417,7 +417,7 @@
     {
       "id": 10,
       "name": "Mean_Node",
-      "color": "#4c1541",
+      "color": "var(--kerykeion-chart-color-mean-node)",
       "is_active": false,
       "element_points": 0,
       "related_zodiac_signs": [],
@@ -426,7 +426,7 @@
     {
       "id": 11,
       "name": "True_Node",
-      "color": "#4c1541",
+      "color": "var(--kerykeion-chart-color-true-node)",
       "is_active": true,
       "element_points": 20,
       "related_zodiac_signs": [],
@@ -435,7 +435,7 @@
     {
       "id": 12,
       "name": "Chiron",
-      "color": "#666f06",
+      "color": "var(--kerykeion-chart-color-chiron)",
       "is_active": true,
       "element_points": 0,
       "related_zodiac_signs": [],
@@ -444,7 +444,7 @@
     {
       "id": 13,
       "name": "First_House",
-      "color": "#ff7e00",
+      "color": "var(--kerykeion-chart-color-first-house)",
       "is_active": true,
       "element_points": 40,
       "related_zodiac_signs": [],
@@ -453,7 +453,7 @@
     {
       "id": 14,
       "name": "Tenth_House",
-      "color": "#FF0000",
+      "color": "var(--kerykeion-chart-color-tenth-house)",
       "is_active": true,
       "element_points": 20,
       "related_zodiac_signs": [],
@@ -462,7 +462,7 @@
     {
       "id": 15,
       "name": "Seventh_House",
-      "color": "#0000FF",
+      "color": "var(--kerykeion-chart-color-seventh-house)",
       "is_active": false,
       "element_points": 0,
       "related_zodiac_signs": [],
@@ -471,7 +471,7 @@
     {
       "id": 16,
       "name": "Fourth_House",
-      "color": "#000000",
+      "color": "var(--kerykeion-chart-color-fourth-house)",
       "is_active": false,
       "element_points": 0,
       "related_zodiac_signs": [],
@@ -480,52 +480,52 @@
     {
       "id": 17,
       "name": "Mean_Lilith",
-      "color": "#000",
+      "color": "var(--kerykeion-chart-color-mean-lilith)",
       "is_active": true,
       "element_points": 0,
       "related_zodiac_signs": [],
       "label": "Mean_Lilith"
     }
   ],
+
   "chart_colors": {
-    "paper_0": "#000000",
-    "paper_1": "#ffffff",
-    "zodiac_bg_0": "#ff7200",
-    "zodiac_bg_1": "#6b3d00",
-    "zodiac_bg_2": "#69acf1",
-    "zodiac_bg_3": "#2b4972",
-    "zodiac_bg_4": "#ff7200",
-    "zodiac_bg_5": "#6b3d00",
-    "zodiac_bg_6": "#69acf1",
-    "zodiac_bg_7": "#2b4972",
-    "zodiac_bg_8": "#ff7200",
-    "zodiac_bg_9": "#6b3d00",
-    "zodiac_bg_10": "#69acf1",
-    "zodiac_bg_11": "#2b4972",
-    "zodiac_icon_0": "#ff7200",
-    "zodiac_icon_1": "#6b3d00",
-    "zodiac_icon_2": "#69acf1",
-    "zodiac_icon_3": "#2b4972",
-    "zodiac_icon_4": "#ff7200",
-    "zodiac_icon_5": "#6b3d00",
-    "zodiac_icon_6": "#69acf1",
-    "zodiac_icon_7": "#2b4972",
-    "zodiac_icon_8": "#ff7200",
-    "zodiac_icon_9": "#6b3d00",
-    "zodiac_icon_10": "#69acf1",
-    "zodiac_icon_11": "#2b4972",
-    "zodiac_radix_ring_0": "#ff0000",
-    "zodiac_radix_ring_1": "#ff0000",
-    "zodiac_radix_ring_2": "#ff0000",
-    "zodiac_transit_ring_0": "#ff0000",
-    "zodiac_transit_ring_1": "#ff0000",
-    "zodiac_transit_ring_2": "#0000ff",
-    "zodiac_transit_ring_3": "#0000ff",
-    "houses_radix_line": "#ff0000",
-    "houses_transit_line": "#0000ff",
-    "lunar_phase_0": "#000000",
-    "lunar_phase_1": "#FFFFFF",
-    "lunar_phase_2": "#CCCCCC"
+    "paper_0": "var(--kerykeion-chart-color-paper-0)",
+    "paper_1": "var(--kerykeion-chart-color-paper-1)",
+    "zodiac_bg_0": "var(--kerykeion-chart-color-zodiac-bg-0)",
+    "zodiac_bg_1": "var(--kerykeion-chart-color-zodiac-bg-1)",
+    "zodiac_bg_2": "var(--kerykeion-chart-color-zodiac-bg-2)",
+    "zodiac_bg_3": "var(--kerykeion-chart-color-zodiac-bg-3)",
+    "zodiac_bg_4": "var(--kerykeion-chart-color-zodiac-bg-4)",
+    "zodiac_bg_5": "var(--kerykeion-chart-color-zodiac-bg-5)",
+    "zodiac_bg_6": "var(--kerykeion-chart-color-zodiac-bg-6)",
+    "zodiac_bg_7": "var(--kerykeion-chart-color-zodiac-bg-7)",
+    "zodiac_bg_8": "var(--kerykeion-chart-color-zodiac-bg-8)",
+    "zodiac_bg_9": "var(--kerykeion-chart-color-zodiac-bg-9)",
+    "zodiac_bg_10": "var(--kerykeion-chart-color-zodiac-bg-10)",
+    "zodiac_bg_11": "var(--kerykeion-chart-color-zodiac-bg-11)",
+    "zodiac_icon_0": "var(--kerykeion-chart-color-zodiac-icon-0)",
+    "zodiac_icon_1": "var(--kerykeion-chart-color-zodiac-icon-1)",
+    "zodiac_icon_2": "var(--kerykeion-chart-color-zodiac-icon-2)",
+    "zodiac_icon_3": "var(--kerykeion-chart-color-zodiac-icon-3)",
+    "zodiac_icon_4": "var(--kerykeion-chart-color-zodiac-icon-4)",
+    "zodiac_icon_5": "var(--kerykeion-chart-color-zodiac-icon-5)",
+    "zodiac_icon_6": "var(--kerykeion-chart-color-zodiac-icon-6)",
+    "zodiac_icon_7": "var(--kerykeion-chart-color-zodiac-icon-7)",
+    "zodiac_icon_8": "var(--kerykeion-chart-color-zodiac-icon-8)",
+    "zodiac_icon_9": "var(--kerykeion-chart-color-zodiac-icon-9)",
+    "zodiac_icon_10": "var(--kerykeion-chart-color-zodiac-icon-10)",
+    "zodiac_icon_11": "var(--kerykeion-chart-color-zodiac-icon-11)",
+    "zodiac_radix_ring_0": "var(--kerykeion-chart-color-zodiac-radix-ring-0)",
+    "zodiac_radix_ring_1": "var(--kerykeion-chart-color-zodiac-radix-ring-1)",
+    "zodiac_radix_ring_2": "var(--kerykeion-chart-color-zodiac-radix-ring-2)",
+    "zodiac_transit_ring_0": "var(--kerykeion-chart-color-zodiac-transit-ring-0)",
+    "zodiac_transit_ring_1": "var(--kerykeion-chart-color-zodiac-transit-ring-1)",
+    "zodiac_transit_ring_2": "var(--kerykeion-chart-color-zodiac-transit-ring-2)",
+    "zodiac_transit_ring_3": "var(--kerykeion-chart-color-zodiac-transit-ring-3)",
+    "houses_radix_line": "var(--kerykeion-chart-color-houses-radix-line)",
+    "houses_transit_line": "var(--kerykeion-chart-color-houses-transit-line)",
+    "lunar_phase_0": "var(--kerykeion-chart-color-lunar-phase-0)",
+    "lunar_phase_1": "var(--kerykeion-chart-color-lunar-phase-1)"
   },
   "general_settings": {
     "axes_orbit": 1,
